This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: pyexpat: segmentation fault when `--with-system-expat` is specified
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 3.11, Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, serhiy.storchaka, vstinner, y-tag
Priority: normal Keywords: patch

Created on 2021-09-30 11:21 by y-tag, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
pyexpat-log.txt y-tag, 2021-09-30 11:21
Pull Requests
URL Status Linked Edit
PR 28649 merged y-tag, 2021-09-30 11:50
PR 28692 merged miss-islington, 2021-10-02 09:57
PR 28693 closed miss-islington, 2021-10-02 09:57
Messages (3)
msg402949 - (view) Author: TAGAMI Yukihiro (y-tag) * Date: 2021-09-30 11:21
Some tests, which are related to pyexpat, get failed with `./configure --with-system-expat`.
```
11 tests failed:                       
    test_minidom test_multiprocessing_fork                                                               
    test_multiprocessing_forkserver test_multiprocessing_spawn
    test_plistlib test_pulldom test_pyexpat test_sax test_xml_etree
    test_xml_etree_c test_xmlrpc
```

Since 3.10.0b2, `Modules/pyexpat.c` has been broken.
I guess this is caused by accessing freed memory.
For more detail, please refer to the attached file.
msg403050 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-10-02 09:57
New changeset 0742abdc48886b74ed3b66985a54bb1c32802670 by TAGAMI Yukihiro in branch 'main':
bpo-45329: Fix freed memory access in pyexpat.c (GH-28649)
https://github.com/python/cpython/commit/0742abdc48886b74ed3b66985a54bb1c32802670
msg403051 - (view) Author: miss-islington (miss-islington) Date: 2021-10-02 13:21
New changeset 22cf6a2f2347b7d4f11e45e557beace55acc79b5 by Miss Islington (bot) in branch '3.10':
bpo-45329: Fix freed memory access in pyexpat.c (GH-28649)
https://github.com/python/cpython/commit/22cf6a2f2347b7d4f11e45e557beace55acc79b5
History
Date User Action Args
2022-04-11 14:59:50adminsetgithub: 89492
2021-10-02 13:22:32serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-10-02 13:21:58miss-islingtonsetmessages: + msg403051
2021-10-02 09:57:25miss-islingtonsetpull_requests: + pull_request27055
2021-10-02 09:57:20miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request27054
2021-10-02 09:57:16serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg403050
2021-09-30 11:59:50vstinnersetnosy: + vstinner
2021-09-30 11:50:13y-tagsetkeywords: + patch
stage: patch review
pull_requests: + pull_request27017
2021-09-30 11:21:11y-tagcreate