bpo-45329: Fix freed memory access in pyexpat.c (GH-28649) (cherry picked from commit 0742abdc48886b74ed3b66985a54bb1c32802670)

Co-authored-by: TAGAMI Yukihiro <tagami.yukihiro@gmail.com>